--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^6.4.0",
+    "@capacitor/android": "^5.5.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.1",
     "@capacitor/haptics": "5.0.6",
@@ -31,7 +32,7 @@
     "@ionic/angular": "^7.0.0",
     "firebase": "^10.5.2",
     "ionicons": "^7.0.0",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
+    "phonegap-plugin-barcodescanner": "git+https://github.com/StarleyDev/barcodescanner-sdk31.git",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
